--- a/giacomo.ipynb
+++ b/giacomo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,24 +10,14 @@
     "from pyspark.sql import SparkSession\n",
     "import numpy as np\n",
     "import scipy.spatial as SS\n",
-    "from scipy.spatial import KDTree\n"
+    "from scipy.spatial import KDTree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/08/30 21:24:04 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spark = SparkSession.builder \\\n",
     "        .master(\"spark://master:7077\")\\\n",
@@ -37,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,14 +61,15 @@
     "    mass_raw = FoF.GroupMass * 1e10     # Halo masses in Msun/h\n",
     "\n",
     "    dim = pos.shape[0]\n",
-    "    id = np.arange(dim, dtype=int).reshape(dim,1)\n",
+    "    id = np.arange(dim, dtype=int).reshape(dim, 1)\n",
     "    pos_mass_matrix = np.hstack([id, pos, mass_raw.reshape(dim, 1)])\n",
     "\n",
     "    return pos_mass_matrix\n",
     "\n",
+    "\n",
+    "\n",
     "# Mass cut function\n",
     "def mass_filter(pos_mass_element, cut):\n",
-    "\n",
     "    mass = pos_mass_element[4]\n",
     "    if mass >= cut:\n",
     "        return pos_mass_element\n",
@@ -86,25 +77,23 @@
     "def calculate_bounds(rdd):\n",
     "    \"\"\"Calcola i limiti dello spazio tridimensionale (min e max per X, Y, Z).\"\"\"\n",
     "    # Estrai i minimi per X, Y, Z\n",
-    "    min_coords = rdd.map(lambda x: (x[1], x[2], x[3])).reduce(lambda a, b: (\n",
-    "        min(a[0], b[0]), \n",
-    "        min(a[1], b[1]), \n",
-    "        min(a[2], b[2])\n",
-    "    ))\n",
+    "    min_coords = rdd.map(lambda x: (x[1], x[2], x[3]))\\\n",
+    "                    .reduce(lambda a, b: (min(a[0], b[0]),\n",
+    "                                          min(a[1], b[1]),\n",
+    "                                          min(a[2], b[2])))\n",
     "    \n",
     "    # Estrai i massimi per X, Y, Z\n",
-    "    max_coords = rdd.map(lambda x: (x[1], x[2], x[3])).reduce(lambda a, b: (\n",
-    "        max(a[0], b[0]), \n",
-    "        max(a[1], b[1]), \n",
-    "        max(a[2], b[2])\n",
-    "    ))\n",
+    "    max_coords = rdd.map(lambda x: (x[1], x[2], x[3]))\\\n",
+    "                    .reduce(lambda a, b: (max(a[0], b[0]),\n",
+    "                                          max(a[1], b[1]),\n",
+    "                                          max(a[2], b[2])))\n",
     "    \n",
     "    return min_coords, max_coords"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +104,7 @@
     "pos_mass_array = get_pos_mass(test_FoF)\n",
     "\n",
     "# mass cut\n",
-    "cut = np.quantile(pos_mass_array[:, 3], 0.997)\n",
+    "cut = np.quantile(pos_mass_array[:, 4], 0.997)\n",
     "\n",
     "# parallelize and filter\n",
     "pos_mass_rdd = sc.parallelize(pos_mass_array)\\\n",
@@ -124,15 +113,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(1347501959799636.0)"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gggg = np.array(pos_mass_rdd.take(5))\n",
+    "np.quantile(gggg[:,4], 0.997)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "24/08/30 22:07:45 WARN TaskSetManager: Stage 22 contains a task of very large size (1050 KiB). The maximum recommended task size is 1000 KiB.\n",
-      "24/08/30 22:07:45 WARN TaskSetManager: Stage 23 contains a task of very large size (1050 KiB). The maximum recommended task size is 1000 KiB.\n"
+      "24/08/31 09:02:34 WARN TaskSetManager: Stage 19 contains a task of very large size (1050 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "24/08/31 09:02:35 WARN TaskSetManager: Stage 20 contains a task of very large size (1050 KiB). The maximum recommended task size is 1000 KiB.\n"
      ]
     }
    ],
@@ -162,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,14 +211,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "24/08/30 22:12:57 WARN TaskSetManager: Stage 25 contains a task of very large size (1050 KiB). The maximum recommended task size is 1000 KiB.\n"
+      "24/08/31 08:13:56 WARN TaskSetManager: Stage 2 contains a task of very large size (1050 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "                                                                                \r"
      ]
     }
    ],
@@ -218,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +314,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[75], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Riduci tutti gli archi ottenuti dalle connessioni parallele\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m grafo_finale \u001b[38;5;241m=\u001b[39m \u001b[43medges_parallelizzati\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreduce\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43ma\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[13], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Riduci tutti gli archi ottenuti dalle connessioni parallele\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m grafo_finale \u001b[38;5;241m=\u001b[39m \u001b[43medges_parallelizzati\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreduce\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43ma\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m/usr/local/spark/python/pyspark/rdd.py:1924\u001b[0m, in \u001b[0;36mRDD.reduce\u001b[0;34m(self, f)\u001b[0m\n\u001b[1;32m   1921\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[1;32m   1922\u001b[0m     \u001b[38;5;28;01myield\u001b[39;00m reduce(f, iterator, initial)\n\u001b[0;32m-> 1924\u001b[0m vals \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmapPartitions\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfunc\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcollect\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1925\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m vals:\n\u001b[1;32m   1926\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m reduce(f, vals)\n",
       "File \u001b[0;32m/usr/local/spark/python/pyspark/rdd.py:1833\u001b[0m, in \u001b[0;36mRDD.collect\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1831\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m SCCallSiteSync(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcontext):\n\u001b[1;32m   1832\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mctx\u001b[38;5;241m.\u001b[39m_jvm \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m-> 1833\u001b[0m     sock_info \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mctx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_jvm\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mPythonRDD\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcollectAndServe\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_jrdd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrdd\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1834\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mlist\u001b[39m(_load_from_socket(sock_info, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_jrdd_deserializer))\n",
       "File \u001b[0;32m/usr/local/spark/python/lib/py4j-0.10.9.7-src.zip/py4j/java_gateway.py:1321\u001b[0m, in \u001b[0;36mJavaMember.__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1314\u001b[0m args_command, temp_args \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_build_args(\u001b[38;5;241m*\u001b[39margs)\n\u001b[1;32m   1316\u001b[0m command \u001b[38;5;241m=\u001b[39m proto\u001b[38;5;241m.\u001b[39mCALL_COMMAND_NAME \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1317\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_header \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1318\u001b[0m     args_command \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1319\u001b[0m     proto\u001b[38;5;241m.\u001b[39mEND_COMMAND_PART\n\u001b[0;32m-> 1321\u001b[0m answer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgateway_client\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msend_command\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcommand\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1322\u001b[0m return_value \u001b[38;5;241m=\u001b[39m get_return_value(\n\u001b[1;32m   1323\u001b[0m     answer, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgateway_client, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtarget_id, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mname)\n\u001b[1;32m   1325\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m temp_arg \u001b[38;5;129;01min\u001b[39;00m temp_args:\n",
@@ -317,7 +328,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 32:==================================================>       (7 + 1) / 8]\r"
+      "[Stage 6:===================================================>       (7 + 1) / 8]\r"
      ]
     }
    ],
@@ -335,6 +346,16 @@
     "# Visualizza il grafo finale\n",
     "for edge in grafo_finale:\n",
     "    print(edge)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc.stop()\n",
+    "spark.stop()"
    ]
   },
   {
