--- a/giacomo.ipynb
+++ b/giacomo.ipynb
@@ -24,7 +24,7 @@
      "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/08/31 13:54:47 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "24/08/31 14:13:55 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -90,6 +90,7 @@
     "    if mass >= cut:\n",
     "        return pos_mass_rdd\n",
     "    \n",
+    "\n",
     "# Assign each point to a box\n",
     "def assign_box(point, boxes):\n",
     "    id, x, y, z, m = point\n",
@@ -101,6 +102,8 @@
     "    \n",
     "    return box_assign\n",
     "\n",
+    "\n",
+    "# KD-tree to find edges in boxes\n",
     "def get_edges(pos_mass_points):\n",
     "    pos_mass_matrix = np.array(pos_mass_points)\n",
     "    pos = pos_mass_matrix[:,1:4]\n",
@@ -110,7 +113,14 @@
     "    edge_idx = kd_tree.query_pairs(r=0.2, output_type=\"ndarray\")\n",
     "    edge_idx = np.array([sorted((id[i], id[j])) for i, j in edge_idx])\n",
     "    \n",
-    "    return edge_idx"
+    "    return edge_idx\n",
+    "\n",
+    "\n",
+    "# find unique pairs of edges between 2 boxes (pere uniche)\n",
+    "def unique_pears(mat1, mat2):\n",
+    "    mat = np.vstack((mat1, mat2))\n",
+    "    \n",
+    "    return np.unique(mat, axis=0)"
    ]
   },
   {
@@ -137,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,26 +185,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#punti_partizionati = punti_in_partizioni.groupByKey().mapValues(list)\n",
     "boxes_rdd = point_box_rdd.groupByKey().mapValues(list)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,99 +203,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[('box1',\n",
-       "  array([[261., 266.],\n",
-       "         [266., 573.],\n",
-       "         [ 30., 266.],\n",
-       "         ...,\n",
-       "         [ 51., 571.],\n",
-       "         [571., 685.],\n",
-       "         [108., 571.]])),\n",
-       " ('box5',\n",
-       "  array([[228., 607.],\n",
-       "         [228., 315.],\n",
-       "         [228., 481.],\n",
-       "         ...,\n",
-       "         [281., 679.],\n",
-       "         [166., 679.],\n",
-       "         [166., 281.]])),\n",
-       " ('box8',\n",
-       "  array([[ 90., 500.],\n",
-       "         [ 90., 198.],\n",
-       "         [ 36.,  90.],\n",
-       "         ...,\n",
-       "         [323., 358.],\n",
-       "         [323., 746.],\n",
-       "         [358., 746.]])),\n",
-       " ('box6',\n",
-       "  array([[381., 740.],\n",
-       "         [ 97., 740.],\n",
-       "         [ 89., 740.],\n",
-       "         ...,\n",
-       "         [465., 541.],\n",
-       "         [195., 541.],\n",
-       "         [195., 465.]]))]"
-      ]
-     },
-     "execution_count": 264,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "24/08/31 14:14:24 WARN TaskSetManager: Stage 0 contains a task of very large size (1050 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "                                                                                \r"
+     ]
     }
    ],
    "source": [
-    "edges_rdd.take(4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 278,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(972, 2)"
-      ]
-     },
-     "execution_count": 278,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "edges_rdd.values().take(2)[1].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def unique_pears(mat1, mat2):\n",
-    "    mat = np.vstack((mat1, mat2))\n",
-    "    return np.unique(mat, axis=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rdd_no_key= edges_rdd.map(lambda x: x[1]).reduce(lambda a, b: unique_pears(a, b))    #.flatMap(lambda x: x)\\\n",
+    "rdd_no_key = edges_rdd.map(lambda x: x[1])\\\n",
+    "                     .reduce(lambda a, b: unique_pears(a, b))\n",
     "                            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +238,7 @@
        "       [737., 745.]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,144 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#partizioni_parallelizzate = punti_partizionati.partitionBy(punti_partizionati.count())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#def connessione_partizioni(partizione1, partizione2, r):\n",
-    "#    \"\"\"\n",
-    "#    Trova i collegamenti tra i punti nelle zone di overlap tra due partizioni.\n",
-    "#    \"\"\"\n",
-    "#    # Estrazione delle coordinate\n",
-    "#    coord1 = [(p[1], p[2], p[3]) for p in partizione1]\n",
-    "#    coord2 = [(p[1], p[2], p[3]) for p in partizione2]\n",
-    "#    \n",
-    "#    # Creazione dei KDTree per le due partizioni\n",
-    "#    tree1 = KDTree(coord1)\n",
-    "#    tree2 = KDTree(coord2)\n",
-    "#    \n",
-    "#    # Trova i punti di partizione1 che sono vicini a partizione2\n",
-    "#    edges = []\n",
-    "#    for i, point in enumerate(coord1):\n",
-    "#        # Trova tutti i punti in partizione2 entro distanza r da point in partizione1\n",
-    "#        indices = tree2.query_ball_point(point, r)\n",
-    "#        \n",
-    "#        for j in indices:\n",
-    "#            # Aggiungi un arco tra il punto di partizione1 e il punto corrispondente di partizione2\n",
-    "#            edges.append((partizione1[i], partizione2[j]))\n",
-    "#    \n",
-    "#    return edges\n",
-    "#\n",
-    "## Funzione per applicare la connessione in parallelo\n",
-    "#def connessione_in_partizione(iterator, r):\n",
-    "#    partizioni = list(iterator)\n",
-    "#    edges = []\n",
-    "#    \n",
-    "#    # Connetti i punti tra ogni coppia di partizioni\n",
-    "#    for i in range(len(partizioni)):\n",
-    "#        for j in range(i + 1, len(partizioni)):\n",
-    "#            nome_part1, punti1 = partizioni[i]\n",
-    "#            nome_part2, punti2 = partizioni[j]\n",
-    "#            edges.extend(connessione_partizioni(punti1, punti2, r))\n",
-    "#    \n",
-    "#    return iter(edges)\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Applica la connessione in parallelo\n",
-    "#edges_parallelizzati = partizioni_parallelizzate.mapPartitions(lambda iterator: connessione_in_partizione(iterator, r))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "aaaaa§"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:root:KeyboardInterrupt while sending command.=========>       (7 + 1) / 8]\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/usr/local/spark/python/lib/py4j-0.10.9.7-src.zip/py4j/java_gateway.py\", line 1038, in send_command\n",
-      "    response = connection.send_command(command)\n",
-      "               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/usr/local/spark/python/lib/py4j-0.10.9.7-src.zip/py4j/clientserver.py\", line 511, in send_command\n",
-      "    answer = smart_decode(self.stream.readline()[:-1])\n",
-      "                          ^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/mnt/anaconda3/envs/pyspark_env/lib/python3.12/socket.py\", line 720, in readinto\n",
-      "    return self._sock.recv_into(b)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "KeyboardInterrupt\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Riduci tutti gli archi ottenuti dalle connessioni parallele\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m grafo_finale \u001b[38;5;241m=\u001b[39m \u001b[43medges_parallelizzati\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreduce\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43ma\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/usr/local/spark/python/pyspark/rdd.py:1924\u001b[0m, in \u001b[0;36mRDD.reduce\u001b[0;34m(self, f)\u001b[0m\n\u001b[1;32m   1921\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m\n\u001b[1;32m   1922\u001b[0m     \u001b[38;5;28;01myield\u001b[39;00m reduce(f, iterator, initial)\n\u001b[0;32m-> 1924\u001b[0m vals \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmapPartitions\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfunc\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcollect\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1925\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m vals:\n\u001b[1;32m   1926\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m reduce(f, vals)\n",
-      "File \u001b[0;32m/usr/local/spark/python/pyspark/rdd.py:1833\u001b[0m, in \u001b[0;36mRDD.collect\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1831\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m SCCallSiteSync(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcontext):\n\u001b[1;32m   1832\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mctx\u001b[38;5;241m.\u001b[39m_jvm \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m-> 1833\u001b[0m     sock_info \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mctx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_jvm\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mPythonRDD\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcollectAndServe\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_jrdd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrdd\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1834\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mlist\u001b[39m(_load_from_socket(sock_info, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_jrdd_deserializer))\n",
-      "File \u001b[0;32m/usr/local/spark/python/lib/py4j-0.10.9.7-src.zip/py4j/java_gateway.py:1321\u001b[0m, in \u001b[0;36mJavaMember.__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m   1314\u001b[0m args_command, temp_args \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_build_args(\u001b[38;5;241m*\u001b[39margs)\n\u001b[1;32m   1316\u001b[0m command \u001b[38;5;241m=\u001b[39m proto\u001b[38;5;241m.\u001b[39mCALL_COMMAND_NAME \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1317\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_header \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1318\u001b[0m     args_command \u001b[38;5;241m+\u001b[39m\\\n\u001b[1;32m   1319\u001b[0m     proto\u001b[38;5;241m.\u001b[39mEND_COMMAND_PART\n\u001b[0;32m-> 1321\u001b[0m answer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgateway_client\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msend_command\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcommand\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1322\u001b[0m return_value \u001b[38;5;241m=\u001b[39m get_return_value(\n\u001b[1;32m   1323\u001b[0m     answer, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgateway_client, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtarget_id, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mname)\n\u001b[1;32m   1325\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m temp_arg \u001b[38;5;129;01min\u001b[39;00m temp_args:\n",
-      "File \u001b[0;32m/usr/local/spark/python/lib/py4j-0.10.9.7-src.zip/py4j/java_gateway.py:1038\u001b[0m, in \u001b[0;36mGatewayClient.send_command\u001b[0;34m(self, command, retry, binary)\u001b[0m\n\u001b[1;32m   1036\u001b[0m connection \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_connection()\n\u001b[1;32m   1037\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 1038\u001b[0m     response \u001b[38;5;241m=\u001b[39m \u001b[43mconnection\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msend_command\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcommand\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1039\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m binary:\n\u001b[1;32m   1040\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m response, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_create_connection_guard(connection)\n",
-      "File \u001b[0;32m/usr/local/spark/python/lib/py4j-0.10.9.7-src.zip/py4j/clientserver.py:511\u001b[0m, in \u001b[0;36mClientServerConnection.send_command\u001b[0;34m(self, command)\u001b[0m\n\u001b[1;32m    509\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m    510\u001b[0m     \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m--> 511\u001b[0m         answer \u001b[38;5;241m=\u001b[39m smart_decode(\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstream\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreadline\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m])\n\u001b[1;32m    512\u001b[0m         logger\u001b[38;5;241m.\u001b[39mdebug(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAnswer received: \u001b[39m\u001b[38;5;132;01m{0}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(answer))\n\u001b[1;32m    513\u001b[0m         \u001b[38;5;66;03m# Happens when a the other end is dead. There might be an empty\u001b[39;00m\n\u001b[1;32m    514\u001b[0m         \u001b[38;5;66;03m# answer before the socket raises an error.\u001b[39;00m\n",
-      "File \u001b[0;32m/mnt/anaconda3/envs/pyspark_env/lib/python3.12/socket.py:720\u001b[0m, in \u001b[0;36mSocketIO.readinto\u001b[0;34m(self, b)\u001b[0m\n\u001b[1;32m    718\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[1;32m    719\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 720\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_sock\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrecv_into\u001b[49m\u001b[43m(\u001b[49m\u001b[43mb\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    721\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m timeout:\n\u001b[1;32m    722\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_timeout_occurred \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Stage 6:===================================================>       (7 + 1) / 8]\r"
-     ]
-    }
-   ],
-   "source": [
-    "# Riduci tutti gli archi ottenuti dalle connessioni parallele\n",
-    "#grafo_finale = edges_parallelizzati.reduce(lambda a, b: a + b)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Visualizza il grafo finale\n",
-    "for edge in grafo_finale:\n",
-    "    print(edge)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
