--- a/multiple_files.ipynb
+++ b/multiple_files.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,8 @@
      "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/09/01 17:14:59 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "24/09/02 09:56:26 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "24/09/02 09:56:27 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
      ]
     }
    ],
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,6 +96,39 @@
     "\n",
     "    return pos_mass_cut_rdd[0][mass >= cut, :]\n",
     "\n",
+    "# Function to find the maximum number of partitions available for a certain r_link\n",
+    "def sub_box_number(r_link): \n",
+    "    cond=False\n",
+    "    box_number=1 # starting number of partitions\n",
+    "    box_length=1.0 # box length in Gpc\n",
+    "    while (cond==False):\n",
+    "        if(box_length/box_number>r_link): # avoids r_link overlapping with the partition length\n",
+    "            box_number+=1\n",
+    "        else:\n",
+    "            cond=True\n",
+    "    return box_number\n",
+    "\n",
+    "\n",
+    "# Function that returns the partitions bounds as a dictionary of lists of tuples, each tuple being the min and max of a dimension\n",
+    "def sub_box_bounds(box_number,r_link): \n",
+    "    sub_length=1.0/box_number # partition length\n",
+    "    bounds={}\n",
+    "    base='box'\n",
+    "    sub_box_counter=1\n",
+    "    for x in range(1,box_number):\n",
+    "        for y in range(1,box_number):\n",
+    "            for z in range(1,box_number):\n",
+    "                key=base+str(sub_box_counter)\n",
+    "                single_bounds=[]\n",
+    "                centre=[x,y,z] # vertex of a sub_box corresponding to min x,y,z\n",
+    "                for i in range(3):\n",
+    "                    min_bound=max(0,centre[i]-0.5*r_link)\n",
+    "                    max_bound=min(1,centre[i]+sub_length+0.5*r_link)\n",
+    "                    single_bounds.append((min_bound,max_bound))\n",
+    "                bounds[key]=single_bounds\n",
+    "                sub_box_counter+=1\n",
+    "\n",
+    "    return bounds\n",
     "\n",
     "# Function to assign each point into a box according to its coordinates\n",
     "def assign_box(point, boxes):\n",
@@ -106,7 +140,6 @@
     "           box_assign.append((box_name, point))\n",
     "    \n",
     "    return box_assign\n",
-    "\n",
     "\n",
     "\n",
     "# Function to apply KD-tree algorithm to find edges in boxes\n",
@@ -126,7 +159,7 @@
     "def unique_pears(mat1, mat2):\n",
     "    mat = np.vstack((mat1, mat2))\n",
     "    \n",
-    "    return np.unique(mat, axis=0)\n"
+    "    return np.unique(mat, axis=0)"
    ]
   },
   {
@@ -154,7 +187,7 @@
     "path_list = [(i, \"/mnt/cosmo_GNN/Data/\"+str(i)) for i in range(N_sims)]\n",
     "\n",
     "cosmo_rdd = sc.parallelize(path_list)\\\n",
-    "            .mapValues(read_cosmo_data)\n"
+    "            .mapValues(read_cosmo_data)"
    ]
   },
   {
@@ -264,14 +297,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N_boxes = sub_box_number(r_link=0.2)\n",
+    "\n",
+    "boxes = sub_box_bounds(3, 0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "N_boxes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'box1': [(0.9, 1), (0.9, 1), (0.9, 1)],\n",
+       " 'box2': [(0.9, 1), (0.9, 1), (1.9, 1)],\n",
+       " 'box3': [(0.9, 1), (1.9, 1), (0.9, 1)],\n",
+       " 'box4': [(0.9, 1), (1.9, 1), (1.9, 1)],\n",
+       " 'box5': [(1.9, 1), (0.9, 1), (0.9, 1)],\n",
+       " 'box6': [(1.9, 1), (0.9, 1), (1.9, 1)],\n",
+       " 'box7': [(1.9, 1), (1.9, 1), (0.9, 1)],\n",
+       " 'box8': [(1.9, 1), (1.9, 1), (1.9, 1)]}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "boxes"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create the boxes\n",
-    "min_x, min_y, min_z = 0, 0, 0 #min_coords\n",
-    "max_x, max_y, max_z = 1, 1, 1 #max_coords\n",
+    "min_x, min_y, min_z = 0, 0, 0 # min_coords\n",
+    "max_x, max_y, max_z = 1, 1, 1 # max_coords\n",
     "\n",
+    "# Overlap\n",
     "r = 0.1  \n",
     "\n",
     "# Compute the midpoint for every dimension\n",
@@ -288,7 +380,7 @@
     "    \"box6\": [(x_mid - r, max_x     ), (min_y    , y_mid + r), (z_mid - r, max_z    )],\n",
     "    \"box7\": [(min_x    , x_mid + r ), (y_mid - r, max_y    ), (z_mid - r, max_z    )],\n",
     "    \"box8\": [(x_mid - r, max_x     ), (y_mid - r, max_y    ), (z_mid - r, max_z    )],\n",
-    "}\n"
+    "}"
    ]
   },
   {
@@ -393,7 +485,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sim = 2 # only simularions 0, 1, 2 work\n",
+    "sim = 2 # only simulations 0, 1, 2 work\n",
     "num = pos_mass_filtered.filter(lambda x: x[0] == sim).keys().take(1)[0]\n",
     "edge_list = final.filter(lambda x: x[0] == sim).values().take(1)[0]\n",
     "pos_mas_plot = pos_mass_filtered.filter(lambda x: x[0] == sim).values().take(1)[0][:,1:5]\n",
