--- a/multiple_graphs.ipynb
+++ b/multiple_graphs.ipynb
@@ -17,7 +17,8 @@
     "from pyspark.sql import SparkSession\n",
     "import numpy as np\n",
     "import scipy.spatial as SS\n",
-    "import math"
+    "import math\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -38,7 +39,7 @@
      "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/08/30 15:23:01 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "24/09/02 09:18:34 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -67,24 +68,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "class graph:\n",
     "\n",
-    "    def __init__(self, node_f, sim_pars, glob_f, edge_idx, edge_f):\n",
+    "    def __init__(self, node_f, pos, sim_pars, glob_f, edge_idx, edge_f):\n",
     "        \n",
     "        self.node_f = node_f\n",
+    "        self.pos = pos\n",
     "        self.sim_pars = sim_pars\n",
     "        self.glob_f = glob_f\n",
     "        self.edge_idx = edge_idx\n",
-    "        self.edge_f = edge_f"
+    "        self.edge_f = edge_f\n",
+    "\n",
+    "        self.boxsize = 1.e6 # Box size in comoving kpc/h \n",
+    "\n",
+    "        def plot3D(self, num, pars_file):\n",
+    "            fig = plt.figure(figsize=(12, 12))\n",
+    "            fontsize = 12\n",
+    "\n",
+    "            ax = fig.add_subplot(projection =\"3d\")\n",
+    "\n",
+    "            self.pos *= self.boxsize/1.e3   # show in Mpc\n",
+    "\n",
+    "            # Draw lines for each edge\n",
+    "            for (src, dst) in self.edge_idx: #.t().tolist():\n",
+    "\n",
+    "                src = pos[int(src)].tolist()\n",
+    "                dst = pos[int(dst)].tolist()\n",
+    "\n",
+    "                ax.plot([src[0], dst[0]], [src[1], dst[1]], zs=[src[2], dst[2]], linewidth=0.6, color='dimgrey')\n",
+    "\n",
+    "            # Plot nodes\n",
+    "            mass_mean = np.mean(self.node_f)\n",
+    "            for i,m in enumerate(self.node_f):\n",
+    "                    ax.scatter(pos[i, 0], pos[i, 1], pos[i, 2], s=50*m*m/(mass_mean**2), zorder=1000, alpha=0.6, color = 'mediumpurple')\n",
+    "\n",
+    "            ax.xaxis.set_tick_params(labelsize=fontsize)\n",
+    "            ax.yaxis.set_tick_params(labelsize=fontsize)\n",
+    "            ax.zaxis.set_tick_params(labelsize=fontsize)\n",
+    "\n",
+    "            ax.set_xlabel('x (Mpc)', fontsize=16, labelpad=15)\n",
+    "            ax.set_ylabel('y (Mpc)', fontsize=16, labelpad=15)\n",
+    "            ax.set_zlabel('z (Mpc)', fontsize=16, labelpad=15)\n",
+    "\n",
+    "            rl = '$R_{link} = 0.2$'\n",
+    "\n",
+    "            ax.set_title(f'\\tGraph n°{num}, Masses $\\\\geq 99.7$% percentile, {rl} Mpc \\t \\n \\n $\\\\Omega_m = {float(pars_file[0]):.3f}$ \\t $\\\\sigma_8 = {float(pars_file[1]):.3f}$', fontsize=20)\n",
+    "\n",
+    "            # fig.savefig(\"Plots/Graphs/graph_\"+num+\"_997.png\", bbox_inches='tight', pad_inches=0.6, dpi=400)\n",
+    "            # plt.close(fig)\n",
+    "\n",
+    "            plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,8 +260,9 @@
     "    glob_feat = joined_tuple[1][4]\n",
     "\n",
     "    masses = pos_mass[:,3]\n",
+    "    pos = pos_mass[:, :3]\n",
     "\n",
-    "    return graph(masses, sim_pars, glob_feat, edge_idx, edge_attr)"
+    "    return graph(masses, pos, sim_pars, glob_feat, edge_idx, edge_attr)"
    ]
   },
   {
@@ -285,6 +328,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Getting positions and masses from files"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
@@ -294,14 +344,42 @@
     "pos_mass_rdd = cosmo_rdd.mapValues(get_pos_mass)\n",
     "\n",
     "# filtering\n",
-    "filtered_rdd = pos_mass_rdd.mapValues(mass_filter)\n",
-    "\n",
+    "filtered_rdd = pos_mass_rdd.mapValues(mass_filter)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Clustering phase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# KDTree RDD\n",
     "kdtree_rdd = filtered_rdd.mapValues(get_tree)\n",
     "\n",
     "# edge indexes RDD\n",
-    "edge_idx_rdd = kdtree_rdd.mapValues(get_edges)\n",
-    "\n",
+    "edge_idx_rdd = kdtree_rdd.mapValues(get_edges)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Building graphs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# adding reverse pairs\n",
     "edge_idx_rdd_r = edge_idx_rdd.mapValues(rev_pairs)\n",
     "\n",
@@ -377,7 +455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
