edge features to do

--- a/single_graph.ipynb
+++ b/single_graph.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Distributed processing to obtain a single graph from a single simulation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -32,7 +39,7 @@
      "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/09/02 14:31:56 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "24/09/02 15:09:24 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -61,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,50 +158,6 @@
     "    plt.show()\n",
     "\n",
     "\n",
-    "# Get edge features \n",
-    "def get_edge_feat(pairs_rdd, distances_rdd, positions_rdd):\n",
-    "\n",
-    "    pairs_rdd = pairs_rdd.map(lambda x: x.T)\n",
-    "    rows = pairs_rdd.map(lambda x: x[0]).collect()\n",
-    "    cols = pairs_rdd.map(lambda x: x[1]).collect()\n",
-    "\n",
-    "    # centroid of halo catalogue (3d position of the centroid)\n",
-    "    centroid = positions_rdd.mean()\n",
-    "\n",
-    "    # distance between each point wrt the centroid\n",
-    "    pos_filtered_rows = positions_rdd.filter(lambda x: x[0] in rows).map(lambda x: x[1])\n",
-    "    pos_filtered_cols = positions_rdd.filter(lambda x: x[0] in cols).map(lambda x: x[1])\n",
-    "\n",
-    "    row_rdd = pos_filtered_rows.map(lambda x: x - centroid)\n",
-    "    col_rdd = pos_filtered_cols.map(lambda x: x - centroid)\n",
-    "\n",
-    "    # normalizing\n",
-    "    row_rdd = row_rdd.map(lambda x: x/np.linalg.norm(x).reshape(-1,1)).collect()\n",
-    "    col_rdd = col_rdd.map(lambda x: x/np.linalg.norm(x).reshape(-1,1)).collect()\n",
-    "    distances_rdd = distances_rdd.map(lambda x: x/0.2).collect()\n",
-    "\n",
-    "    # number of pairs\n",
-    "    n_pairs = pairs_rdd.count()\n",
-    "\n",
-    "    # get cosines\n",
-    "    cos1 = np.array([\n",
-    "         np.dot(\n",
-    "              np.array(pos_filtered_rows)[i,:].T,\n",
-    "              np.array(pos_filtered_cols)[i,:]\n",
-    "              ) for i in range(n_pairs)])\n",
-    "    \n",
-    "    cos2 = np.array([np.dot(np.array(pos_filtered_rows)[i,:].T,\n",
-    "                            np.array(distances_rdd)[i,:]) for i in range(n_pairs)])\n",
-    "\n",
-    "    # concatenate to get all edge attributes\n",
-    "    edge_attr = np.concatenate([\n",
-    "         np.array(distances_rdd).reshape(-1,1), \n",
-    "         cos1.reshape(-1,1), \n",
-    "         cos2.reshape(-1,1)\n",
-    "         ], axis=1)\n",
-    "\n",
-    "    return edge_attr\n",
-    "\n",
     "# Get global features\n",
     "def get_glob_feat(rdd):\n",
     "    return math.log10(rdd.count())\n",
@@ -213,22 +176,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# simulations parameter\n",
-    "\n",
-    "sim_pars_file = np.loadtxt(\"/mnt/cosmo_GNN/latin_hypercube_params.txt\", dtype=float)"
+    "### Read simulation file and parallelize data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# simulations parameter\n",
+    "sim_pars_file = np.loadtxt(\"/mnt/cosmo_GNN/latin_hypercube_params.txt\", dtype=float)\n",
+    "\n",
     "# read file and get positions and masses\n",
     "file_path = \"/mnt/cosmo_GNN/Data/\" + str(8)\n",
     "test_FoF = read_cosmo_data(file_path)\n",
@@ -243,14 +205,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\rightarrow$ here we may add something to be benchmarked $\\leftarrow$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Clustering phase to get linked halos"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "24/09/02 15:09:27 WARN TaskSetManager: Stage 0 contains a task of very large size (3215 KiB). The maximum recommended task size is 1000 KiB.\n",
       "                                                                                \r"
      ]
     }
@@ -273,14 +250,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "add here pairs_rdd collect to calculate clustering performance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Graph 3D plot"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "24/09/02 15:09:28 WARN TaskSetManager: Stage 1 contains a task of very large size (3215 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "24/09/02 15:09:29 WARN TaskSetManager: Stage 2 contains a task of very large size (3215 KiB). The maximum recommended task size is 1000 KiB.\n",
+      "24/09/02 15:09:30 WARN TaskSetManager: Stage 3 contains a task of very large size (3215 KiB). The maximum recommended task size is 1000 KiB.\n",
       "                                                                                \r"
      ]
     },
@@ -306,18 +300,68 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Retrieving edge features"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get edge attributes\n",
-    "\n"
+    "# indexed position rdd\n",
+    "idx_pos_test = pos_rdd.zipWithIndex().map(lambda x: (x[1], x[0]))\n",
+    "\n",
+    "# get pairs elements\n",
+    "pairs_rdd_t = pairs_rdd.map(lambda x: np.array(x).T)\n",
+    "rows = pairs_rdd_t.map(lambda x: x[0]).collect()\n",
+    "cols = pairs_rdd_t.map(lambda x: x[1]).collect()\n",
+    "\n",
+    "# calculate halos centroid position\n",
+    "halo_centroid = pos_rdd.mean()\n",
+    "\n",
+    "# distance between each pair element wrt halos centroid\n",
+    "pos_rdd_filtered_r = idx_pos_test.filter(lambda x: x[0] in rows).map(lambda x: x[1])\n",
+    "pos_rdd_filtered_c = idx_pos_test.filter(lambda x: x[0] in cols).map(lambda x: x[1])\n",
+    "\n",
+    "row_d = pos_rdd_filtered_r.map(lambda x: x - halo_centroid)\n",
+    "col_d = pos_rdd_filtered_c.map(lambda x: x - halo_centroid)\n",
+    "\n",
+    "# normalizing\n",
+    "row_n = row_d.map(lambda x: x/np.linalg.norm(x)).collect()\n",
+    "col_n = col_d.map(lambda x: x/np.linalg.norm(x)).collect()\n",
+    "dist_n = distances_rdd.map(lambda x: x/0.2).collect()\n",
+    "\n",
+    "# number of pairs\n",
+    "n_pairs = pairs_rdd.count()\n",
+    "\n",
+    "# get cosines\n",
+    "cos1 = np.array([\n",
+    "         np.dot(\n",
+    "              np.array(row_n)[i].T,\n",
+    "              np.array(col_n)[i]\n",
+    "              ) for i in range(n_pairs)])\n",
+    "    \n",
+    "cos2 = np.array([\n",
+    "    np.dot(\n",
+    "        np.array(row_n)[i].T,\n",
+    "        np.array(dist_n)[i]\n",
+    "        ) for i in range(n_pairs)])\n",
+    "\n",
+    "# concatenate to get all edge attributes\n",
+    "edge_attr = np.concatenate([\n",
+    "        np.array(dist_n).reshape(-1,1), \n",
+    "        cos1.reshape(-1,1), \n",
+    "        cos2.reshape(-1,1)\n",
+    "        ], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
