keep single rdd row col

--- a/single_graph.ipynb
+++ b/single_graph.ipynb
@@ -556,15 +556,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "# filter linked positions\n",
     "pos_rdd_filtered = cartesian_rdd.filter(lambda x: [x[0][1], x[1][1]] in pairs_array.tolist())\n",
+    "# put the\n",
+    "pos_rdd_filtered = pos_rdd_filtered.map(lambda x: ((x[0][1], x[0][0]), (x[1][1], x[1][0])))\n",
     "\n",
     "# calculate halos centroid position\n",
     "halo_centroid = pos_rdd.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[((0, array([0.7752579 , 0.14784946, 0.4608917 ], dtype=float32)),\n",
+       "  (0, array([0.7752579 , 0.14784946, 0.4608917 ], dtype=float32)))]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pos_rdd_filtered.take(1)"
    ]
   },
   {
@@ -598,6 +621,52 @@
     "# get edge attributes\n",
     "cosines_rdd = cos1.zip(cos2)\n",
     "edge_feat_rdd = cosines_rdd.zip(distances_rdd_norm).map(lambda x: [x[0][0], x[0][1], x[1]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dist_centr(pos_filtered):\n",
+    "    d = pos_filtered[1] - halo_centroid\n",
+    "    \n",
+    "    return d / np.linalg.norm(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d_row_col = pos_rdd_filtered.map(lambda x: (dist_centr(x[0]), dist_centr(x[1])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(array([ 0.6337595 , -0.77258855, -0.03815444], dtype=float32),\n",
+       "  array([ 0.6337595 , -0.77258855, -0.03815444], dtype=float32)),\n",
+       " (array([ 0.6337595 , -0.77258855, -0.03815444], dtype=float32),\n",
+       "  array([ 0.6576473 , -0.7316947 , -0.17922884], dtype=float32)),\n",
+       " (array([ 0.6337595 , -0.77258855, -0.03815444], dtype=float32),\n",
+       "  array([ 0.59177375, -0.77649134,  0.21648344], dtype=float32))]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d_row_col.take(3)"
    ]
   },
   {
