--- a/single_graph.ipynb
+++ b/single_graph.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,20 +30,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/09/03 09:04:51 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "24/09/03 09:04:51 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spark = SparkSession.builder \\\n",
     "        .master(\"spark://master:7077\")\\\n",
@@ -53,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +252,7 @@
        "       dtype=float32)]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +274,7 @@
        " np.float32(541840320000000.0)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +296,7 @@
        " array([0.98808074, 0.95635426, 0.2773033 ], dtype=float32)]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +318,7 @@
        " (array([0.98808074, 0.95635426, 0.2773033 ], dtype=float32), 2)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,9 +329,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -354,7 +350,7 @@
        "  (array([0.98808074, 0.95635426, 0.2773033 ], dtype=float32), 2))]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +372,7 @@
        " (0, 2, array([0.21282285, 0.8085048 , 0.18358839], dtype=float32))]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +394,7 @@
        " (0, 2, np.float32(0.85596627))]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +416,7 @@
        " (0, 24, np.float32(0.12099926))]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +436,7 @@
        "[(0, 0), (0, 22), (0, 24)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +456,7 @@
        "[np.float32(0.0), np.float32(0.13359493), np.float32(0.12099926)]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +494,7 @@
        "(6734, 2)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,14 +552,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# filter linked positions\n",
     "pos_rdd_filtered = cartesian_rdd.filter(lambda x: [x[0][1], x[1][1]] in pairs_array.tolist())\n",
     "# put the\n",
-    "pos_rdd_filtered = pos_rdd_filtered.map(lambda x: ((x[0][1], x[0][0]), (x[1][1], x[1][0])))\n",
+    "#pos_rdd_filtered = pos_rdd_filtered.map(lambda x: ((x[0][1], x[0][0]), (x[1][1], x[1][0])))\n",
     "\n",
     "# calculate halos centroid position\n",
     "halo_centroid = pos_rdd.mean()"
@@ -571,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +577,7 @@
        "  (0, array([0.7752579 , 0.14784946, 0.4608917 ], dtype=float32)))]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,40 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# distance between each pair element wrt halos centroid (normalized)\n",
-    "d_row = pos_rdd_filtered.map(lambda x: x[0][0])\\\n",
-    "                        .map(lambda x: x - halo_centroid)\\\n",
-    "                        .map(lambda x: x/np.linalg.norm(x))\n",
-    "\n",
-    "d_col = pos_rdd_filtered.map(lambda x: x[1][0])\\\n",
-    "                        .map(lambda x: x - halo_centroid)\\\n",
-    "                        .map(lambda x: x/np.linalg.norm(x))\n",
-    "\n",
-    "# pair distance coordinates\n",
-    "diff_filtered_rdd = pos_rdd_filtered.map(lambda x: x[0][0]-x[1][0])\n",
-    "\n",
-    "# get cosines\n",
-    "cos1 = d_row.zip(d_col)\\\n",
-    "            #.map(lambda x: np.dot(x[0].T, x[1]))\n",
-    "\n",
-    "cos2 = d_row.zip(diff_filtered_rdd)\\\n",
-    "            .map(lambda x: np.dot(x[0].T, x[1]))\n",
-    "\n",
-    "# normalized distance between pairs (by linking radius)\n",
-    "distances_rdd_norm = distances_rdd.map(lambda x: x/0.2)\n",
-    "\n",
-    "# get edge attributes\n",
-    "cosines_rdd = cos1.zip(cos2)\n",
-    "edge_feat_rdd = cosines_rdd.zip(distances_rdd_norm).map(lambda x: [x[0][0], x[0][1], x[1]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,16 +600,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "d_row_col = pos_rdd_filtered.map(lambda x: (dist_centr(x[0]), dist_centr(x[1])))"
+    "# distance between each pair element wrt halos centroid (normalized)\n",
+    "d_row_col = pos_rdd_filtered.map(lambda x: (dist_centr(x[0]), dist_centr(x[1])))\n",
+    "\n",
+    "#d_row = pos_rdd_filtered.map(lambda x: x[0][1])\\\n",
+    "#                        .map(lambda x: x - halo_centroid)\\\n",
+    "#                        .map(lambda x: x/np.linalg.norm(x))\n",
+    "\n",
+    "#d_col = pos_rdd_filtered.map(lambda x: x[1][1])\\\n",
+    "#                        .map(lambda x: x - halo_centroid)\\\n",
+    "#                        .map(lambda x: x/np.linalg.norm(x))\n",
+    "\n",
+    "# pair distance coordinates\n",
+    "diff_filtered_rdd = pos_rdd_filtered.map(lambda x: x[0][0]-x[1][0])\n",
+    "\n",
+    "# get cosines\n",
+    "#cos1 = d_row.zip(d_col)\\\n",
+    "#            #.map(lambda x: np.dot(x[0].T, x[1]))\n",
+    "#\n",
+    "#cos2 = d_row.zip(diff_filtered_rdd)\\\n",
+    "#            .map(lambda x: np.dot(x[0].T, x[1]))\n",
+    "\n",
+    "# normalized distance between pairs (by linking radius)\n",
+    "distances_rdd_norm = distances_rdd.map(lambda x: x/0.2)\n",
+    "\n",
+    "# get edge attributes\n",
+    "cosines_rdd = cos1.zip(cos2)\n",
+    "edge_feat_rdd = cosines_rdd.zip(distances_rdd_norm).map(lambda x: [x[0][0], x[0][1], x[1]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +649,7 @@
        "  array([ 0.59177375, -0.77649134,  0.21648344], dtype=float32))]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +671,7 @@
        " array([ 0.6337595 , -0.77258855, -0.03815444], dtype=float32)]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -693,18 +682,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[array([ 0.6337595 , -0.77258855, -0.03815444], dtype=float32),\n",
-       " array([ 0.6576473 , -0.7316947 , -0.17922884], dtype=float32),\n",
-       " array([ 0.59177375, -0.77649134,  0.21648344], dtype=float32)]"
+       "[array([-0.5735617, -0.5927078, -0.5654417], dtype=float32),\n",
+       " array([0.57743365, 0.57699895, 0.577618  ], dtype=float32),\n",
+       " array([0.57742655, 0.5770289 , 0.57759523], dtype=float32)]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,21 +864,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'sc' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43msc\u001b[49m\u001b[38;5;241m.\u001b[39mstop()\n\u001b[1;32m      2\u001b[0m spark\u001b[38;5;241m.\u001b[39mstop()\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'sc' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sc.stop()\n",
     "spark.stop()"
