to be cleaned :)

--- a/distri_multiple_graph_boxbox.ipynb
+++ b/distri_multiple_graph_boxbox.ipynb
@@ -138,14 +138,14 @@
     "\n",
     "\n",
     "# Create graph object\n",
-    "def create_graph(rdd):\n",
+    "def create_graph(element):\n",
     "    sim_graph = graph(\n",
-    "        np.array(rdd[0])[:,3],   # node_f = masses\n",
-    "        np.array(rdd[0])[:,0:3], # pos\n",
-    "        np.array(rdd[3]),        # sim_pars\n",
-    "        np.array(rdd[2]),        # glob_f\n",
-    "        np.array(rdd[1])[:,0:2], # edge_idx\n",
-    "        np.array(rdd[1])[:,2:5], # edge_f\n",
+    "        np.array(element[0])[:,3],   # node_f = masses\n",
+    "        np.array(element[0])[:,0:3], # pos\n",
+    "        np.array(element[3]),        # sim_pars\n",
+    "        np.array(element[2]),        # glob_f\n",
+    "        np.array(element[1])[:,0:2], # edge_idx\n",
+    "        np.array(element[1])[:,2:5], # edge_f\n",
     "    )\n",
     "    return(sim_graph)\n",
     "\n",
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -924,7 +924,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
